@@ -62,6 +62,8 @@
                 <div class="ib-arrow-down"></div>
                 <div class="ib-arrow-left"></div>
                 <div class="ib-arrow-right"></div>
+                <div class="ib-arrow-expand-left-right"></div>
+                <div class="ib-arrow-expand-right-left"></div>
             </div>
         </div>
 
