@@ -31,6 +31,9 @@
 @import "scss/arrows/arrow-down";
 @import "scss/arrows/arrow-left";
 @import "scss/arrows/arrow-right";
+@import "scss/arrows/arrow-expand-left-right";
+@import "scss/arrows/arrow-expand-right-left";
+
 
 /*
     -------------------------------------------------------------------------
